--- a/src/pages/layout.module.scss
+++ b/src/pages/layout.module.scss
@@ -1,7 +1,7 @@
 .layout {
   font-family: var(--font-sans);
   height: 100%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
   padding: var(--size-fluid-2);
 }
